--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,7 +19,12 @@ body {
   filter: blur(5px); /* Adjust the blur value as needed */
   z-index: -1; /* Ensure the background is behind the content */
 }
-
+.ad-container {
+  text-align: center;
+  margin: 20px auto;
+  min-height: 100px; /* Adjust based on your ad size */
+  max-width: 100%;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
